@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.1.1.1 2004/04/02 11:52:37 jmmv Exp $
+$NetBSD: distinfo,v 1.2 2004/06/21 20:24:55 xtraeme Exp $
 
-SHA1 (gnome-themes-extras-0.6.tar.bz2) = 70bcee5bc66bd468a800a050a15605cfdea5a380
-Size (gnome-themes-extras-0.6.tar.bz2) = 1931052 bytes
+SHA1 (gnome-themes-extras-0.7.tar.bz2) = a00315dddf6a7191f77bd11fe1fb2347f1fd273c
+Size (gnome-themes-extras-0.7.tar.bz2) = 3600402 bytes
