@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6266 2004/06/21 20:16:52 adrianp Exp $
+$NetBSD: CHANGES,v 1.6267 2004/06/21 20:24:55 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3010,3 +3010,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated bins to 1.1.26 [martti 2004-06-21]
 	Updated gimp to 2.0.2 [adam 2004-06-21]
 	Updated mhonarc to 2.6.10 [adrianp 2004-06-21]
+	Updated gnome-themes-extras to 0.7 [xtraeme 2004-06-21]
